js-for-sf-devs/main/default/objects/Bike_Gear_Teeth__c/Bike_Gear_Teeth__c.object-meta.xml
<CustomObject>
    <label>Bike Gear Teeth</label>
    <nameField>
        <label>Tooth Count</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bike Gear Teeth</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>