js-for-sf-devs/main/default/objects/Bike_Gear_Teeth__c/fields/Bike_Gear__c.field-meta.xml
<CustomField>
    <fullName>Bike_Gear__c</fullName>
    <label>Bike Gear</label>
    <referenceTo>Bike_Gear__c</referenceTo>
    <relationshipLabel>Bike Gear Teeth</relationshipLabel>
    <relationshipName>Bike_Gear_Teeth</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>