js-for-sf-devs/main/default/objects/Bike_Gear_Teeth__c/fields/Number_of_Teeth__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Teeth__c</fullName>
    <formula>VALUE(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Teeth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>