js-for-sf-devs/main/default/objects/Bike_Gear_Teeth__c/fields/Unique_Teeth_Per_Gear__c.field-meta.xml
<CustomField>
    <fullName>Unique_Teeth_Per_Gear__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Teeth Per Gear</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>