js-for-sf-devs/main/default/objects/Bike_Gear_Teeth__c/validationRules/Name_is_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_is_numeric</fullName>
    <active>true</active>
    <description>Ensure name field is a numeric value.</description>
    <errorConditionFormula>NOT(ISNUMBER(Name))</errorConditionFormula>
    <errorDisplayField>Bike_Gear__c</errorDisplayField>
    <errorMessage>Tooth Count must be numeric.</errorMessage>
</ValidationRule>