js-for-sf-devs/main/default/objects/Bike_Gear_Teeth__c/validationRules/Tooth_Count_is_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Tooth_Count_is_Positive</fullName>
    <active>true</active>
    <description>no negative numbers allowed in tooth count</description>
    <errorConditionFormula>VALUE(Name) &lt; 1</errorConditionFormula>
    <errorDisplayField>Bike_Gear__c</errorDisplayField>
    <errorMessage>Tooth count must be a number value greater than 0</errorMessage>
</ValidationRule>